# biotech-screener

./: $envMD_AUTH_TOKEN=eyJhbGciOiJSUzI1N.txt  .gitattributes  .gitignore  ACTION_PLAN_NOW.md  API_KEY_SECURITY_REVISION.md  BACKTESTING_GUIDE.md  CFO_EXTRACTOR_GUIDE.md  CFO_INTEGRATION_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.txt  CORRELATION_BONUS_FIX.md  CUSIP_MAPPER_QUICKSTART.md  DATA_COLLECTION_ACTION_PLAN.md  ELITE_DIVERSIFIER_CONFIG.md  ENABLE_TOPN_NOW.md  ETF_EXPANSION_IMPLEMENTATION.md  ETF_SETUP_README.md  FINAL_AGGRESSIVE_v2.0_1.30x.md  FINAL_CONFIG_v1.8_7pct.md  FUNCTION_NAME_FIX.md  FUNCTION_SIGNATURE_FIX.md  GOSS_Institutional_Dossier_Full.docx  GOSS_Institutional_Dossier_Full.md  GOVERNANCE.md  HOTFIX_ESTIMATED.md  HOTFIX_EventType_JSON.py  HOTFIX_V2_COMPLETE.md  IMMEDIATE_FIX_GUIDE.md  INSTALLATION.md  INSTALLATION_CHECKLIST.md  INSTITUTIONAL_SIGNAL_REPORT.txt  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.py  INTEGRATION_QUICK_START.md  MINIMAL_INTEGRATION_PATCH.md  MODULE2_FIX_COMPLETE.md  MODULE_2_ENHANCEMENT_SUMMARY.md  MODULE_3A_ACTION_PLAN.md  MODULE_3A_CONTRACT_SPEC.md  (+303 more)
.github/: dependabot.yml  pull_request_template.md
aact/: aact_validator.py  desktop.ini
audit_framework/: __init__.py  orchestrator.py  types.py
audit_logs/: universe_cleaning_audit_20260116_202118.json  universe_cleaning_audit_20260116_203904.json  universe_cleaning_audit_20260116_205040.json  universe_cleaning_audit_20260116_205850.json  universe_cleaning_audit_20260116_210416.json
backtest/: __init__.py  compare_module5_versions.py  data_readiness.py  factor_attribution.py  ic_measurement.py  metrics.py  portfolio_metrics.py  returns_provider.py  sanity_metrics.py  sharadar_provider.py  stability_attribution.py
backtest_results/: MODULE5_V2_V3_BACKTEST_REPORT.md  module5_v2_v3_comparison_2022-01-15_2024-12-15.json  module5_v2_v3_comparison_2023-01-01_2024-12-31.json  ranked_2025-11-01.json  ranked_2025-12-01.json  ranked_2026-01-06.json
checkpoints/: enhancements_2026-01-15.json  enhancements_2026-01-18.json  module_1_2026-01-15.json  module_1_2026-01-18.json  module_2_2026-01-15.json  module_2_2026-01-18.json  module_3_2026-01-15.json  module_3_2026-01-18.json  module_4_2026-01-15.json  module_4_2026-01-18.json  module_5_2026-01-15.json  module_5_2026-01-18.json
collectors/: time_series_collector.py
common/: __init__.py  accuracy_improvements.py  clustering.py  constants.py  data_consistency.py  data_integration_contracts.py  data_quality.py  date_utils.py  forward_looking_separation.py  hash_utils.py  input_validation.py  integration_contracts.py  logging_config.py  null_safety.py  pit_enforcement.py  production_hardening.py  provenance.py  random_state.py  robustness.py  robustness_extended.py  run_manifest.py  run_summary.py  schema_validation.py  score_to_er.py  score_utils.py  staleness_gates.py  types.py
config/: v3_production_integration.py
(+5549 files in other folders)
